--- a/senex_shop/templates/senex_shop/checkout/checkout.html
+++ b/senex_shop/templates/senex_shop/checkout/checkout.html
@@ -10,7 +10,7 @@
 {% block content %}
     <div class="payment-page">
         {% block checkout_progress %}
-            {% include 'checkout/progress.html' %}
+            {% include 'senex_shop/checkout/progress.html' %}
         {% endblock %}
         {% if error %}
             <div class="alert alert-error">
