--- a/senex_shop/templates/senex_shop/detail_customproduct.html
+++ b/senex_shop/templates/senex_shop/detail_customproduct.html
@@ -1,4 +1,4 @@
-{% extends "store/product.html" %}
+{% extends "senex_shop/product.html" %}
 {% load url from future %}
 {% load i18n %}
 {% load currency_filters %}
