--- a/senex_shop/templates/senex_shop/checkout/shipping_address.html
+++ b/senex_shop/templates/senex_shop/checkout/shipping_address.html
@@ -1,4 +1,4 @@
-{% extends 'checkout/checkout.html' %}
+{% extends 'senex_store/checkout/checkout.html' %}
 {% load i18n %}
 {% load currency_filters %}
 {% load static from staticfiles %}
@@ -6,7 +6,7 @@
 {% block title %}{% trans "Checkout - Shipping Address" %}{% endblock %}
 
 {% block checkout_progress %}
-    {% include 'checkout/progress.html' with step=1 %}
+    {% include 'senex_store/checkout/progress.html' with step=1 %}
 {% endblock %}
 
 {% block page_title %}{% trans "Shipping Address" %}{% endblock %}
@@ -65,7 +65,7 @@
           id="new_shipping_address">
         <div class="well">
             {% csrf_token %}
-            {% include "partials/form_fields.html" with form=form %}
+            {% include "senex_store/partials/form_fields.html" with form=form %}
             <div class="shipping-form-bottom">
                 <button type="submit" class="btn btn-large btn-primary">{% trans "Continue" %}</button>
             </div>
