--- a/senex_shop/templates/senex_shop/checkout/gateway.html
+++ b/senex_shop/templates/senex_shop/checkout/gateway.html
@@ -38,7 +38,7 @@
                             {{ form.options.2 }}
                             <div class="form-inline">
                                 {{ form.password }}
-                                <small><a href="{% url 'auth_password_reset' %}" tabindex="-1"
+                                <small><a href="{% url 'password_reset' %}" tabindex="-1"
                                           class="bright-text">{% trans "Get a password reminder" %}</a></small>
                                 {% for error in form.password.errors %}
                                     <span class="help-block">{{ error }}</span>
