--- a/senex_shop/templates/senex_shop/news/post_list.html
+++ b/senex_shop/templates/senex_shop/news/post_list.html
@@ -6,8 +6,7 @@
             <div class="post">
                 <p class="post_title">{{ post.title }}</p>
 
-                <p class="post_metadata">BY {{ post.author.first_name|upper }} {{ post.author.last_name|upper }} | PUBLISHED {{
-                    post.publish|date|upper }}.</p>
+                <p class="post_metadata">{{ post.publish|date }}</p>
                 {% if post.photo %}<p class="post_photo"><img src="{{ post.photo.url }}"/></p>{% endif %}
                 <p class="post_body">{{ post.body }}</p>
             </div>
