--- a/senex_shop/templates/senex_shop/checkout/checkout.html
+++ b/senex_shop/templates/senex_shop/checkout/checkout.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
 {% load i18n %}
-{% load url from future %}
 {% load currency_filters %}
 {% load static staticfiles %}
 {% load thumbnail %}
@@ -112,7 +111,7 @@
                 <h5 class="rule add-top add-bottom">{{ cart.num_items }} Item{{ cart.num_items|pluralize }}</h5>
 
                 <div class="rule">
-                    <h5>Subtotal: {{ cart.total_price|currency }}</h5>
+                    <h5>Subtotal: {{ cart.subtotal|currency }}</h5>
 
                     <p>*Taxes and shipping charges my apply.</p>
                 </div>
