--- a/senex_shop/templates/senex_shop/checkout/payment_details.html
+++ b/senex_shop/templates/senex_shop/checkout/payment_details.html
@@ -59,6 +59,7 @@
     <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
     <script type="text/javascript">
         // This identifies your website in the createToken call below
+        // a comment
         Stripe.setPublishableKey('{{ STRIPE_PUBLIC_KEY }}');
 
         $(function ($) {
