Update text formatting.

--- a/senex_shop/templates/senex_shop/checkout/gateway.html
+++ b/senex_shop/templates/senex_shop/checkout/gateway.html
@@ -19,9 +19,9 @@
             <form action="." method="post" class="form-stacked well">
                 {% csrf_token %}
                 {{ form.non_field_errors }}
-                <h4 class="bright-text">What is your email address?</h4>
+                <h4 class="bright-text">1. What is your email address?</h4>
                 {% include "senex_shop/partials/form_field.html" with field=form.username %}
-                <h4 class="bright-text">Do you have an account?</h4>
+                <h4 class="bright-text">2. Do you have an account?</h4>
 
                 <div class="control-group">
                     <div class="controls">
